# sounds-proxy

./: .dockerignore  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  README.md
.github/workflows/: build_image.yml
payload_examples/: container.json  media.json
src/: bbc.rs  fetch.rs  hls.rs  main.rs  mpegts.rs  s3.rs  s3_upload.rs  sounds_proxy.rs  utils.rs  web_utils.rs
terraform-sounds-proxy-lambda/: .terraform.lock.hcl  .tool-versions  README.md  main.tf  outputs.tf  vars.tf
terraform-sounds-proxy-lambda/image/: Dockerfile  README.md
test/: s3.sh
